--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ packaging==24.1
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
+pypdf==5.0.0
 PyPDF2==3.0.1
 python-dotenv==1.0.1
 PyYAML==6.0.2
